@@ -314,7 +314,7 @@ SPVM_ENV* SPVM_API_new_env_raw(SPVM_ENV* unused_env) {
     SPVM_API_set_precompile_method_address,
     SPVM_API_is_object_array,
     SPVM_API_get_method_id_without_signature,
-    SPVM_API_get_constant_string,
+    SPVM_API_get_constant_string_value,
   };
   
   SPVM_ENV* env = calloc(1, sizeof(env_init));
@@ -3929,7 +3929,7 @@ int32_t SPVM_API_call_spvm_method_vm(SPVM_ENV* env, int32_t method_id, SPVM_VALU
       case SPVM_OPCODE_C_ID_NEW_CONSTANT_STRING: {
         int32_t string_id = opcode->operand1;
         int32_t constant_string_length;
-        const char* constant_string = env->get_constant_string(env, string_id, &constant_string_length);
+        const char* constant_string = env->get_constant_string_value(env, string_id, &constant_string_length);
         void* string = env->new_string_raw(env, constant_string, constant_string_length);
         if (string == NULL) {
           void* exception = env->new_string_nolen_raw(env, "Can't allocate memory for string");
@@ -7646,7 +7646,7 @@ void SPVM_API_free_env(SPVM_ENV* env) {
   env->free_env_raw(env);
 }
 
-const char* SPVM_API_get_constant_string(SPVM_ENV* env, int32_t string_id, int32_t* string_length) {
+const char* SPVM_API_get_constant_string_value(SPVM_ENV* env, int32_t string_id, int32_t* string_length) {
   SPVM_RUNTIME_INFO* runtime_info = env->runtime_info;;
   
   SPVM_STRING* constant_string = SPVM_LIST_fetch(runtime_info->strings, string_id);
