@@ -2,6 +2,7 @@ Revision history for SPVM
 0.9508_02  2021-03-11
         [CHANGE]
         * Add get_method_id_without_signature native API.
+        * Add get_constant_string_value native API.
         
         [NON BACKWORD COMPATIBLE CHANGES]
         * Rename native API new_compiler to compiler_new
